# PTO-Kernel

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run_v03_pto_to_linx.sh
cmake/: linx-toolchain.cmake
docs/: index.html
docs/assets/: site.css  site.js
docs/contracts/: tile_llvm_codegen_contract.md  tile_op_to_isa_v03.md  tile_qemu_parity_contract.md
docs/data/: status.json
docs/roadmap/: linxcore_alignment.md
examples/: pto_flash_attention_auto.cpp  pto_gemm_auto.cpp  pto_mamulb.cpp  pto_tload_store.cpp  pto_tmatmul_acc.cpp
include/common/: attention_kernel_helpers.hpp  block_vector_compat.hpp  block_vector_kernels.hpp  dropout_rng.hpp  extended_kernel_runtime.hpp  pto_tileop.hpp
include/common/runtime/: kernel_shapes.hpp
include/pto/domains/: ai.hpp  hpc.hpp  math.hpp  rendering.hpp  rendering_types.hpp
include/pto/linx/impl/: backend.hpp
kernels/: README.md  add_custom.cpp  argmax_fp32.cpp  catalog.txt  concat_fp32.cpp  decode_beam_search_fp32.cpp  decode_temperature_scaling_fp32.cpp  decode_topk_filter_fp32.cpp  decode_topp_nucleus_filter_fp32.cpp  fa_performance.cpp  flash_attention.cpp  flash_attention_cube_fp16.cpp  flash_attention_demo.cpp  flash_attention_masked.cpp  flash_attention_vec_fp16.cpp  flash_attention_vec_fp32.cpp  flash_mla_deepseekv3_fp16.cpp  flash_mla_deepseekv3_fp8_e4m3.cpp  gather_fp32.cpp  gemm.cpp  gemm_basic.cpp  gemm_demo.cpp  gemm_performance.cpp  gqa_fp16.cpp  hash_table_lookup_fp32.cpp  ifa_mla_seq1_fp16.cpp  layernorm_fp16.cpp  mamulb.cpp  matmul_a16w4.cpp  matmul_a16w8.cpp  matmul_a8w8.cpp  mha_fp16.cpp  mla_attention_demo.cpp  moe_gate_route_fp16.cpp  moe_topk_fp32.cpp  paged_attention_mha_fp16.cpp  permute_nhwc_nchw_fp32.cpp  reshape_fp32.cpp  rmsnorm_fp16.cpp  rope_apply_fp16.cpp  (+13 more)
kernels/attention/: attention_dropout_fp16.cpp  fa_performance.cpp  flash_attention.cpp  flash_attention_backward_fp16.cpp  flash_attention_backward_fp32.cpp  flash_attention_cube_fp16.cpp  flash_attention_cube_fp4_e2m1.cpp  flash_attention_cube_fp8_e4m3.cpp  flash_attention_demo.cpp  flash_attention_masked.cpp  flash_attention_vec_fp16.cpp  flash_attention_vec_fp32.cpp  gqa_fp16.cpp  ifa_gqa_seq1_fp16.cpp  mla_attention_demo.cpp  paged_attention_gqa_fp16.cpp  sparse_attention_local_fp16.cpp
kernels/decode/: decode_greedy_search_fp32.cpp
kernels/elementwise/: add_custom.cpp  gelu_fp32.cpp  relu_fp32.cpp  softmax_fp32.cpp  swiglu_fp16.cpp
kernels/indexing/: hash_table_insert_fp32.cpp  where_fp32.cpp
kernels/layout/: flatten_fp32.cpp  squeeze_fp32.cpp  stack_fp32.cpp  transpose_large_fp32.cpp
kernels/matmul/: gemm.cpp  gemm_basic.cpp  gemm_demo.cpp  gemm_performance.cpp  gemm_reuse_a_fp16.cpp  gemm_reuse_ab_fp16.cpp  gemm_reuse_b_fp16.cpp  mamulb.cpp  matmul_a8w4.cpp  tmatmul_acc.cpp
kernels/memory/: tload_store.cpp
kernels/normalization/: batchnorm_fp16.cpp
kernels/routing/: moe_mlp_fp16.cpp  moe_sort_fp32.cpp
tests/: block_vector_smoke.cpp  check_benchmark_manifest.py  check_tile_asm_contracts.py  domain_smoke.cpp
tools/: benchmark_manifest.py  build_status_site.py  kernel_catalog.py  run_pto_kernel_parity.py  run_v03_pto_to_linx.sh
